@@ -56,6 +56,19 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.45.1.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-jdk-http</artifactId>
+      <version>3.1.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>3.1.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -65,8 +78,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>21</source>
-          <target>21</target>          
+          <release>21</release>
           <annotationProcessorPaths>
             <path>
                 <groupId>org.projectlombok</groupId>
@@ -90,6 +102,11 @@
             <id>default-cli</id>
             <configuration>
               <mainClass>com.solab.appdesktop/com.solab.appdesktop.GestionProcApplication</mainClass>
+              <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
+              <options>
+                <option>--add-reads</option>
+                <option>com.solab.appdesktop=ALL-UNNAMED</option>
+              </options>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
